@@ -1,3 +1,9 @@
+2004-01-06  Saito <saito2@digitalme.com>
+
+	* timidity/playmidi.c, timidity/sndfont.c, timidity/instrum.h:
+	  Support for SoundFont's Sample Link.
+	  FIx around modulation wheel.
+
 2004-01-05  Saito <saito2@digitalme.com>
 
 	* timidity/playmidi.[ch], timidity/sndfont.c,
